fix integration tests
Signed-off-by: Casey Kuhlman <casey.kuhlman@monax.io>

--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -5,33 +5,32 @@ on:
       - master
 
 jobs:
-  cover:
+  unit:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/setup-go@v1
-      with:
-        go-version: 1.13
-      id: go
-    - uses: actions/checkout@v1
-    - run: make test
-      env:
-        GO_TEST_ARGS: "-coverprofile=coverage.txt -covermode=atomic"
-    - uses: codecov/codecov-action@v1.0.2
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        file: ./coverage.txt
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+        with:
+          go-version: 1.15
+      - run: make test
+        env:
+          GO_TEST_ARGS: "-coverprofile=coverage.txt -covermode=atomic"
+      - uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./coverage.txt
 
   integration:
     runs-on: ubuntu-latest
+    env: 
+      GCLOUD_SERVICE_KEY: ${{ secrets.GCLOUD_SERVICE_KEY }}
     steps:
-    - uses: actions/setup-go@v1
-      with:
-        go-version: 1.13
-      id: go
-    - uses: actions/checkout@v1
-    - run: |
-        echo $GCLOUD_SERVICE_KEY > /tmp/gcloud-service-key.json
-        gcloud auth activate-service-account --key-file=/tmp/gcloud-service-key.json
-        make test_integration
-      env:
-        GCLOUD_SERVICE_KEY: ${{ secrets.GCLOUD_SERVICE_KEY }}
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+        with:
+          go-version: 1.15
+      - uses: google-github-actions/setup-gcloud@master
+        with:
+          service_account_key: ${{ secrets.GCLOUD_SERVICE_KEY }}
+          export_default_credentials: true
+      - run: make test_integration
