--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,61 +8,55 @@ jobs:
   go:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: publish
-      uses: docker://goreleaser/goreleaser
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        args: release --release-notes "NOTES.md"
-      if: success()
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: publish
+        uses: docker://goreleaser/goreleaser
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          args: release --release-notes "NOTES.md"
+        if: success()
 
   js:
     name: yarn
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v1
-      with:
-        node-version: '14.x'
-        registry-url: 'https://registry.npmjs.org'
-    - name: publish
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      run: |
-        git config --global user.email "${GITHUB_ACTOR}"
-        git config --global user.name "${GITHUB_ACTOR}"
-        cd js
-        yarn install
-        yarn build
-        yarn version --no-git-tag-version --new-version $(git describe --tags)
-        yarn config set '//registry.npmjs.org/:_authToken' "${NPM_TOKEN}"
-        yarn publish --access public .
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v2-beta
+        with:
+          node-version: '14.x'
+          registry-url: 'https://registry.npmjs.org'
+      - name: publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
+          git config --global user.email "${GITHUB_ACTOR}"
+          git config --global user.name "${GITHUB_ACTOR}"
+          cd js
+          yarn install
+          yarn build
+          yarn version --no-git-tag-version --new-version $(git describe --tags)
+          yarn config set '//registry.npmjs.org/:_authToken' "${NPM_TOKEN}"
+          yarn publish --access public .
 
   docker:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - run: make docker_build
-    - name: Publish
-      env:
-        DOCKER_REPO: "quay.io/monax/hoard"
-        DOCKER_USER: ${{ secrets.DOCKER_USER }}
-        DOCKER_PASS: ${{ secrets.DOCKER_PASS }}
-      run: |
-        export tag=$(git tag --points-at HEAD)
-        echo ${DOCKER_PASS} | docker login --username ${DOCKER_USER} quay.io --password-stdin
-        docker tag ${DOCKER_REPO}:${tag#v} ${DOCKER_REPO}:latest
-        docker push ${DOCKER_REPO}
-
-  charts:
-    runs-on: ubuntu-latest
-    env:
-      CM_USERNAME: ${{ secrets.CM_USERNAME }}
-      CM_PASSWORD: ${{ secrets.CM_PASSWORD }}
-      CM_URL:  ${{ secrets.CM_URL }}
-    steps:
       - uses: actions/checkout@v2
-      - run: git fetch --unshallow --prune
-      - run: make helm_deps
-      - run: make helm_push
+        with:
+          fetch-depth: 0
+      - run: make docker_build
+      - name: Publish
+        env:
+          DOCKER_REPO: "quay.io/monax/hoard"
+          DOCKER_USER: ${{ secrets.DOCKER_USER }}
+          DOCKER_PASS: ${{ secrets.DOCKER_PASS }}
+        run: |
+          export tag=$(git tag --points-at HEAD)
+          echo ${DOCKER_PASS} | docker login --username ${DOCKER_USER} quay.io --password-stdin
+          docker tag ${DOCKER_REPO}:${tag#v} ${DOCKER_REPO}:latest
+          docker push ${DOCKER_REPO}
