--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,31 +6,34 @@ jobs:
   unit:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/setup-go@v1
-      with:
-        go-version: 1.12
-      id: go
-    - uses: actions/setup-node@v1
-      with:
-        node-version: '14.x'
-    - uses: actions/checkout@v1
-    - run: make build
-    - run: make test
-    - run: make test_js
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+        with:
+          go-version: 1.15
+      - uses: actions/setup-node@v2-beta
+        with:
+          node-version: '14.x'
+      - run: make build
+      - run: make test
+      - run: make test_js
+
+  integration:
+    runs-on: ubuntu-latest
+    env: 
+      GCLOUD_SERVICE_KEY: ${{ secrets.GCLOUD_SERVICE_KEY }}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v1
+        with:
+          go-version: 1.15
+      - uses: google-github-actions/setup-gcloud@master
+        with:
+          service_account_key: ${{ secrets.GCLOUD_SERVICE_KEY }}
+          export_default_credentials: true
+      - run: make test_integration
 
   docker:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - run: make docker_build
-
-  charts:
-    runs-on: ubuntu-latest
-    env:
-      CM_USERNAME: ${{ secrets.CM_USERNAME }}
-      CM_PASSWORD: ${{ secrets.CM_PASSWORD }}
-      CM_URL:  ${{ secrets.CM_URL }}
-    steps:
       - uses: actions/checkout@v2
-      - run: git fetch --unshallow --prune
-      - run: make helm_package
+      - run: make docker_build
