Improve streaming support
- Remove non-idiomatic callback style
- Make use of built-in io package for chunking
- Rename Version to a more appropriate Type enum
- Add LINK ref to support ref-to-refs type
- Clean up Go streaming
- Fix hoarctl and add CLI test
- Use non-blocking streaming for large files in Go
- Fix Duplex mode of pipeline in JS

Signed-off-by: Silas Davis <silas@monax.io>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,14 +12,16 @@ jobs:
           go-version: 1.15
       - uses: actions/setup-node@v2-beta
         with:
-          node-version: '14.x'
+          node-version: '15.x'
+      - run: sudo apt-get install jq
       - run: make build
       - run: make test
+      - run: make test_hoarctl
       - run: make test_js
 
   integration:
     runs-on: ubuntu-latest
-    env: 
+    env:
       GCLOUD_SERVICE_KEY: ${{ secrets.GCLOUD_SERVICE_KEY }}
     steps:
       - uses: actions/checkout@v2
