--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,6 +18,7 @@ jobs:
       - run: make test
       - run: make test_hoarctl
       - run: make test_js
+      - run: make test_regression
 
   integration:
     runs-on: ubuntu-latest
