--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,10 +3,13 @@ on:
   push:
     tags:
       - 'v*'
+    branches:
+      - release
 
 jobs:
   go:
     runs-on: ubuntu-latest
+    if: ${{ startsWith(github.ref, 'refs/tags') }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -17,21 +20,20 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           args: release --release-notes "NOTES.md"
-        if: success()
 
   js:
     name: yarn
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+      - run: git fetch --prune --unshallow
       - uses: actions/setup-node@v2-beta
         with:
           node-version: '14.x'
           registry-url: 'https://registry.npmjs.org'
       - name: publish
         env:
+          # Replace this token (AND WATCH OUT FOR WHITESPACE) if you get NOT FOUND errors when publishing
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           git config --global user.email "${GITHUB_ACTOR}"
@@ -40,8 +42,7 @@ jobs:
           yarn install
           yarn build
           yarn version --no-git-tag-version --new-version $(git describe --tags)
-          yarn config set '//registry.npmjs.org/:_authToken' "${NPM_TOKEN}"
-          yarn publish --access public .
+          yarn publish --non-interactive --access public .
 
   docker:
     runs-on: ubuntu-latest
@@ -56,7 +57,7 @@ jobs:
           DOCKER_USER: ${{ secrets.DOCKER_USER }}
           DOCKER_PASS: ${{ secrets.DOCKER_PASS }}
         run: |
-          export tag=$(git tag --points-at HEAD)
+          export tag=$(scripts/local_version.sh)
           echo ${DOCKER_PASS} | docker login --username ${DOCKER_USER} quay.io --password-stdin
           docker tag ${DOCKER_REPO}:${tag#v} ${DOCKER_REPO}:latest
           docker push ${DOCKER_REPO}
