--- a/js/tsconfig.json
+++ b/js/tsconfig.json
@@ -6,7 +6,7 @@
     "target": "ES2020",
     "lib": ["ES2020"],
     "moduleResolution": "node",
-    "module": "ES2020",
+    "module": "CommonJS",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "allowJs": false,
