--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@monax/hoard",
-  "version": "0.0.0",
+  "version": "9.0.0-dev.5644f38",
   "description": "Hoard client library",
   "main": "dist/index.js",
   "scripts": {
@@ -37,27 +37,26 @@
   },
   "homepage": "https://github.com/monax/hoard#readme",
   "dependencies": {
-    "@grpc/grpc-js": "^1.2.2",
-    "@types/google-protobuf": "^3.7.4",
-    "google-protobuf": "^3.14.0",
-    "openpgp": "^4.10.8"
+    "@grpc/grpc-js": "^1.3.2",
+    "@types/google-protobuf": "^3.15.2",
+    "google-protobuf": "^3.17.2",
+    "openpgp": "4.10.10"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.15",
-    "@types/openpgp": "^4.4.14",
-    "@typescript-eslint/eslint-plugin": "^4.7.0",
-    "@typescript-eslint/parser": "^4.7.0",
+    "@types/jest": "^26.0.23",
+    "@types/openpgp": "^4.4.16",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
     "eslint": "^7.13.0",
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-prettier": "^3.1.4",
-    "grpc-tools": "^1.10.0",
-    "grpc_tools_node_protoc_ts": "^5.0.1",
-    "jest": "^26.6.3",
+    "grpc-tools": "^1.11.1",
+    "grpc_tools_node_protoc_ts": "^5.2.2",
+    "jest": "^27.0.4",
     "prettier": "^2.1.2",
-    "prettier-plugin-organize-imports": "^1.1.1",
-    "source-map-support": "^0.5.19",
-    "ts-jest": "^26.4.4",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.1.2"
+    "prettier-plugin-organize-imports": "^2.1.0",
+    "ts-jest": "^27.0.2",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.2"
   }
 }
