Push version tag and latest tag on release
Signed-off-by: Silas Davis <silas@monax.io>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -56,4 +56,4 @@ jobs:
           export tag=$(scripts/local_version.sh)
           echo ${DOCKER_PASS} | docker login --username ${DOCKER_USER} quay.io --password-stdin
           docker tag ${DOCKER_REPO}:${tag#v} ${DOCKER_REPO}:latest
-          docker push ${DOCKER_REPO}
+          docker push --all-tags ${DOCKER_REPO}
